--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "yup": "^1.3.3"
   },
